# AgenticNewsvendor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
config/: __init__.py  experiment_run_001.yaml  private_config.example.yaml  promts.yaml
dashboard/: app.py  mvp_streamlit_dashboard.py  mvp_streamlit_dashboard_backup.py
data/: .gitkeep  simulated_run1.parquet
data/experiments/run_001/: fresh_bakery_bad.parquet  fresh_bakery_good.parquet  fresh_salad_bad.parquet  fresh_salad_good.parquet  ice_cream_bad.parquet  ice_cream_good.parquet  ready_meal_bad.parquet  ready_meal_good.parquet  soup_bad.parquet  soup_good.parquet
data/scenarios/: scenario_backlog.yaml
data_generation/: experiment.py  utils.py
docs/: EXPERIMENT_DESIGN_MASTER.md  PROJECT_SPECIFICATION.md  STUDY_DESIGN_OPTIONS.md  STUDY_PLAN_AND_ARCHITECTURE.md  study_design_v2.md
old_deprecated_approach/: README.md  requirements.txt
old_deprecated_approach/agentic_system/: langraph_backend.py
old_deprecated_approach/config/: llm_loader.py
old_deprecated_approach/data/: test_run_1.parquet
old_deprecated_approach/data_generation/: __init__.py  features.py  simulator.py
old_deprecated_approach/notebooks/: data_exploration.ipynb  data_generation.ipynb
src/: __init__.py
src/agent/: __init__.py  llm_responder.py  responder.py
src/dgp/: __init__.py  demand_model.py  products.py
src/experiment/: __init__.py  scenario_loader.py
src/tracking/: __init__.py  models.py  storage.py
(+8 files in other folders)
